package com.example.ex0251.ex2;

public abstract class Animal {
    public abstract void eat();
    public abstract void makeSound();
}
