package com.example.ex0251.ex2;

public interface Flyable {
    public void fly();
}
