package com.example.ex0251.ex2;

public interface Runnable {
    public void run();
}
